zeaz-ultra/k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeaz-kafka
spec:
  selector:
    matchLabels:
      app: zeaz-kafka
  template:
    metadata:
      labels:
        app: zeaz-kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.7
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: zeaz-kafka
  ports:
    - port: 9092
      targetPort: 9092
