zeaz-ultra/k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeaz-postgres
spec:
  selector:
    matchLabels:
      app: zeaz-postgres
  template:
    metadata:
      labels:
        app: zeaz-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: zeaz-postgres
  ports:
    - port: 5432
      targetPort: 5432
