zeaz-ultra/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeaz-redis
spec:
  selector:
    matchLabels:
      app: zeaz-redis
  template:
    metadata:
      labels:
        app: zeaz-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: zeaz-redis
  ports:
    - port: 6379
      targetPort: 6379
